--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
+  "devDependencies": {
+    "browser-sync" :"^2.27.10",
+    "editorconfig-checker": "^4.0.2",
+    "html-minifier": "^4.0.0",
+    "postcss-cli": "^9.1.0",
+    "postcss-csso": "^6.0.0",
+    "postcss-import": "^14.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "editorconfig-checker",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
